Updated UI and Node API BuildUp dependencies

--- a/admin/index.html
+++ b/admin/index.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Meals & U - Admin</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="../css/iziToast.min.css"> -->
   <link rel="stylesheet" href="../assets/css/app.css">
 
 </head>
@@ -135,10 +134,8 @@
       </div>
     </section>
   </main>
-  <footer>
-    <p>&copy 2019 Meals & U</p>
-  </footer>
-  <script src="../js/iziToast.min.js"></script>
+    <footer>&copy 2019 Meals & U</footer>
+
   <script src="../js/app.js"></script>
 </body>
 </html>
