--- a/checkout.html
+++ b/checkout.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Meals & U</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <link rel="stylesheet" href="../css/iziToast.min.css">
   <link rel="stylesheet" href="../assets/css/app.css">
 </head>
 
@@ -22,16 +21,10 @@
         </div>
         <ul class="main-nav__list">
             <li class="main-nav__list-item">
-            <a href="javascript:;">Home</a>
+            <a href="index.html">Home</a>
             </li>
             <li class="main-nav__list-item">
-            <a href="index.html">Today's Menu</a>
-            </li>
-            <li class="main-nav__list-item">
-            <a href="todays-order-summary.html">Order Summary</a>
-            </li>
-            <li class="main-nav__list-item">
-            <a href="order-history.html">Order History</a>
+            <a href="food-select.html">Today's Menu</a>
             </li>
             <li class="main-nav__list-item">
             <a href="javascript:;">Logout</a>
@@ -141,7 +134,6 @@
   <footer>
     <p>&copy; 2019 Copyright. <span class="red">Book A Meal</span>.</p>
   </footer>
-  <script src="../js/iziToast.min.js"></script>
   <script src="../js/app.js"></script>
 </body>
 </html>
