--- a/food-select.html
+++ b/food-select.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meals & U</title>
+    <link rel="stylesheet" href="./assets/css/iziToast.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -41,14 +42,14 @@
     </div>
     <section id="main-section">
         <img src="./assets/image/chop.png" alt="">
-        <div class="cta">
+        <!-- <div class="cta">
             <h1>We Cook & Deliver the meals you love</h1>
             <a href="#main">Get Started</a>
-        </div>
+        </div> -->
     </section>
 
+    <!-- <section id="hiw">
 
-    <section id="hiw">
         <h2>How it Works</h2>
         <div id="main">
             <figure>
@@ -63,18 +64,18 @@
                 <img src="./assets/image/hiw3.svg" alt="">
                 <h3>Enjoy your Order</h3>
             </figure>
-    </section>
+    </section> -->
 
     <div class="overlay hide"></div>
     <section class="meal-day">
-        <h2>Today's Meal</h2>
-        <div class="meal-day-section">
+        <h2>Sumptuous Meals for You </h2>
+        <div class="food-selection">
             <div class="card">
                 <img src="./assets/image/pizza.png" alt="Avatar" style="width:100%">
                 <div class="container">
                     <h4><b>Pizza</b></h4>
                     <p>NGN3,500</p>
-                    <a href="/cart.html" class="orderMeal">Order Now</a>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
                 </div>
             </div>
             <div class="card">
@@ -82,7 +83,7 @@
                 <div class="container">
                     <h4><b>Rice & Chicken</b></h4>
                     <p>NGN1,500</p>
-                    <a href="/cart.html" class="orderMeal">Order Now</a>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
                 </div>
             </div>
             <div class="card">
@@ -90,7 +91,7 @@
                 <div class="container">
                     <h4><b>Buristos</b></h4>
                     <p>NGN800</p>
-                    <a href="/cart.html" class="orderMeal">Order Now</a>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
                 </div>
             </div>
             <div class="card">
@@ -98,16 +99,49 @@
                 <div class="container">
                     <h4><b>Shawarma</b></h4>
                     <p>NGN4000</p>
-                    <a href="/cart.html" class="orderMeal">Order Now</a>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/image/pizza.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Pizza</b></h4>
+                    <p>NGN3,500</p>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/image/jchiken.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Rice & Chicken</b></h4>
+                    <p>NGN1,500</p>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/image/burger.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Buristos</b></h4>
+                    <p>NGN800</p>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./assets/image/pizza.png" alt="Avatar" style="width:100%">
+                <div class="container">
+                    <h4><b>Shawarma</b></h4>
+                    <p>NGN4000</p>
+                    <a href="/checkout.html" class="orderMeal">Order Now</a>
                 </div>
             </div>
         </div>
-        <div class="food-select">
-            <a href="food-select.html"><h1>View Our Sumptous Food Selection >>></h1></a>
-        </div>
+        <!-- <div class="food-select">
+                <a href="food-select.html"><span>View Our Sumptous Food Selection >>></span></a>
+        </div> -->
 
     </section>
     <footer>&copy 2019 Meals & U</footer>
+    <script src="./assets/js/iziToast.js"></script>
     <script src="./assets/js/srcipt.js"></script>
 </body>
 </html>
