--- a/admin/menu.html
+++ b/admin/menu.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Book A Meal - Caterer Menu</title>
+  <title>Meals & U</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <link rel="stylesheet" href="../css/iziToast.min.css">
   <link rel="stylesheet" href="../assets/css/app.css">
 </head>
 <body>
@@ -50,8 +49,8 @@
             <a href="javscript:;">Home</a>
             </li>
             <li class="mobile-nav__list-item">
-            <a href="index.html">Today's Menu</a>
             </li>
+            <a href="index.html">Today's Menu</a>
             <li class="mobile-nav__list-item">
             <a href="todays-order-summary.html">Order Summary</a>
             </li>
@@ -64,7 +63,6 @@
         </ul>
         </nav>
     <section class="banner">
-      <p class="banner__text">Select Menu From Below Food Options</p>
     </section>
   </header>
   <main>
@@ -72,12 +70,12 @@
       <div class="menu__food">
         <article class="menu__food-item">
           <div class="menu__food-item__img">
-            <img src="../images/meal1.jpg" alt="Meal">
+            <img src="../assets/image/burger.png" alt="Meal">
           </div>
           <div class="menu__food-item__details">
             <div class="meal-info">
-              <p>Bread and Beans</p>
-              <p>$500.00</p>
+              <p>Buristos</p>
+              <p>N2000</p>
             </div>
             <div class="meal-btn">
               <button class="card-btn">Add</button>
@@ -86,12 +84,12 @@
         </article>
         <article class="menu__food-item">
           <div class="menu__food-item__img">
-            <img src="../images/meal3.jpg" alt="Meal">
+            <img src="../assets/image/pizza.png" alt="Meal">
           </div>
           <div class="menu__food-item__details">
             <div class="meal-info">
-              <p>Jollof Rice</p>
-              <p>$500.00</p>
+              <p>Pizza</p>
+              <p>N1000</p>
             </div>
             <div class="meal-btn">
               <button class="card-btn">Add</button>
@@ -99,14 +97,14 @@
           </div>
         </article>
         <article class="menu__food-item">
-          <div class="ribbon ribbon-top-left"><span>Selected</span></div>
+          <div class="ribbon ribbon-top-bottom"><span>Sold</span></div>
           <div class="menu__food-item__img">
-            <img src="../images/meal1.jpg" alt="Meal">
+            <img src="../assets/image/jchiken.png" alt="Meal">
           </div>
           <div class="menu__food-item__details">
             <div class="meal-info">
-              <p>Bread and Beans</p>
-              <p>$500.00</p>
+              <p>Jollof & Chicken</p>
+              <p>N2500</p>
             </div>
             <div class="meal-btn">
               <button class="card-btn">Remove</button>
@@ -115,12 +113,12 @@
         </article>
         <article class="menu__food-item">
           <div class="menu__food-item__img">
-            <img src="../images/meal3.jpg" alt="Meal">
+            <img src="../assets/image/jollof.jpg" alt="Meal">
           </div>
           <div class="menu__food-item__details">
             <div class="meal-info">
               <p>Jollof Rice</p>
-              <p>$500.00</p>
+              <p>N1500</p>
             </div>
             <div class="meal-btn">
               <button class="card-btn">Add</button>
@@ -131,10 +129,7 @@
       <button class="btn right_btn-lg" id="save-menu">Save</button>
     </section>
   </main>
-  <footer>
-    <p>&copy; 2019 Copyright. <span class="red">Book A Meal</span>.</p>
-  </footer>
-  <script src="../js/iziToast.min.js"></script>
+  <footer>&copy 2019 Meals & U</footer>
   <script src="../js/app.js"></script>
 </body>
 </html>
