--- a/admin/order-history.html
+++ b/admin/order-history.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Book A Meal - Caterer Menu</title>
+  <title>Meals & U</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <link rel="stylesheet" href="../css/iziToast.min.css">
   <link rel="stylesheet" href="../assets/css/app.css">
 </head>
 
@@ -22,7 +21,7 @@
         </div>
         <ul class="main-nav__list">
             <li class="main-nav__list-item">
-            <a href="javascript:;">Home</a>
+            <a href="index.html">Home</a>
             </li>
             <li class="main-nav__list-item">
             <a href="index.html">Today's Menu</a>
@@ -138,10 +137,7 @@
       </div>
     </section>
   </main>
-  <footer>
-    <p>&copy; 2019 Copyright. <span class="red">Book A Meal</span>.</p>
-  </footer>
-  <script src="../js/iziToast.min.js"></script>
+  <footer>&copy 2019 Meals & U</footer>
   <script src="../js/app.js"></script>
 </body>
 </html>
