--- a/admin/todays-order-summary.html
+++ b/admin/todays-order-summary.html
@@ -7,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Meals & U - Admin</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
-  <link rel="stylesheet" href="../css/iziToast.min.css">
   <link rel="stylesheet" href="../assets/css/app.css">
 </head>
 
@@ -141,10 +140,7 @@
       </div>
     </section>
   </main>
-  <footer>
-    <p>&copy; 2019 Copyright. <span class="red">Meals & U</span>.</p>
-  </footer>
-  <script src="../js/iziToast.min.js"></script>
+  <footer>&copy 2019 Meals & U</footer>
   <script src="../js/app.js"></script>
 </body>
 </html>
